<resources>
    <string name="app_name">Keyper</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_result">No result</string>

    <!-- Main -->
    <string name="hello_world">Hello world!</string>
    <string name="action_advance_search">Advance Search</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">Keyper</string>

    <string name="tab_all">ALL</string>
    <string name="tab_star">STAR</string>
    <string name="tab_tag">TAG</string>
    <string name="tab_all_hint">All Account</string>
    <string name="tab_star_hint">Stared Account</string>
    <string name="tab_tag_hint">Tags</string>

    <string name="hint_quick_search">Quick Search</string>
    <string name="hint_search">Search</string>
    <string name="search_box_shared">search_box_shared</string>
    <string name="search_field_site">ACCOUNT</string>
    <string name="search_field_name">NAME</string>
    <string name="search_field_password">PASSWORD</string>
    <string name="search_field_mail">MAIL</string>
    <string name="search_field_description">DESCRIPTION</string>

    <string name="toast_sync_db">Sync Database Completed</string>

    <!-- AccountDetail -->
    <string name="tag">Tag</string>
    <string name="tag_hint">NO TAG</string>
    <string name="site">Account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>

    <string name="action_info">Info</string>
    <string name="action_star">Star</string>
    <string name="action_unstar">Unstar</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="status_saved">SAVED</string>
    <string name="warning_site_not_null">Account can not be null</string>

    <string name="choose_tag_hint">Select or create a tag</string>
    <string name="choose_tag_dialog_title">Tag</string>
    <string name="choose_tag_dialog_new_tag">NEW TAG</string>

    <string name="dialog_title_delete">Warning</string>
    <string name="dialog_content_delete">Do you want to delete this account?</string>
    <string name="dialog_yes_delete">Delete</string>
    <string name="dialog_no_delete">Cancel</string>
    <string name="dialog_title_info">Info</string>
    <string name="dialog_info_create">Created: %1$s</string>
    <string name="dialog_info_update">Modified: %1$s</string>

    <string name="cliped">Copy to clipboard</string>
    <string name="detail_quit_title">Quit</string>
    <string name="detail_quit_msg">Not saved! Do you want to drop changes?</string>
    <string name="positive_quit">Quit</string>

    <!-- Welcome -->
    <string name="first_pwd">Please input password</string>
    <string name="sec_pwd">Please repeat password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="submit">LOGIN</string>
    <string name="welcome_tip_1">All your data is encrypted in local database.</string>
    <string name="welcome_tip_2">Main password is the only way to access the database.</string>
    <string name="welcome_tip_3">You can export/import database to/from your other device.</string>
    <string name="welcome_dialog_title">Reminder</string>
    <string name="welcome_hint">Please input the main password</string>
    <string name="welcome_menu_action_fp">Fingerprint</string>
    <string name="welcome_dialog_fingerprint_title">Use fingerprint to login</string>
    <string name="welcome_dialog_fingerprint_mismatch">Fingerprint mismatch</string>

    <!-- Settings-->
    <string name="settings_title">Settings</string>
    <string name="change_pwd">Change main password</string>
    <string name="change_pwd_succeed">Password saved</string>
    <string name="change_pwd_failed">Change password failed</string>
    <string name="change_pwd_not_null">Password can not be null</string>
    <string name="change_pwd_wrong">Old password wrong</string>
    <string name="change_pwd_hint_old">Please input current password</string>
    <string name="change_pwd_hint_new">Please input new password</string>
    <string name="change_aes">Change AES password</string>
    <string name="change_db">Change Database password</string>
    <string name="change_db_succeed">Database password saved</string>
    <string name="change_db_failed">Change database password failed</string>
    <string name="change_db_not_null">Database password can not null</string>
    <string name="change_db_short">Database password too short</string>
    <string name="change_path">Choose file save path</string>
    <string name="encrypt_password">Encrypt password</string>
    <string name="encrypt_description">Encrypt description</string>
    <string name="set_time_out">Set auto lock time</string>
    <string name="set_time_out_desc">When app go to background, it will be locked after a period</string>
    <string name="set_time_dialog_title">Auto lock time</string>
    <string name="import_data">Import database</string>
    <string name="import_db_password">Please input the password of importing database</string>
    <string name="import_db_error">The password of importing database was wrong</string>
    <string name="import_file_uri_error">Can not resolve this file</string>
    <string name="import_data_succeed">Import database successful</string>
    <string name="import_db_warning_dialog_title">Warning</string>
    <string name="import_db_warning_dialog_msg">Current database will be replaced by the importing database, the data before importing will lost</string>
    <string name="export_data">Export database</string>
    <string name="export_path">Export to: %1$s</string>
    <string name="export_failed">Export failed</string>
    <string name="export_dialog_msg">Database will be exported to /sdcard/encrypted(timestamp).db</string>
    <string name="export_dialog_ok">Export</string>
    <string name="hint_new_db_password">Please input the password of importing database</string>
    <string name="fingerprint">Using fingerprint to login</string>
    <string name="fingerprint_no_sensor">No fingerprint sensor in this device</string>
    <string name="fingerprint_no_enroll">No enrolled fingerprint in system</string>
    <string name="fingerprint_version_too_low">Fingerprint is available in Marshmallow and higher</string>
    <string name="about_label">About</string>
    <string name="about_dialog_title">About</string>
    <string name="permission_delay">Permission delay, can not import or export database</string>

    <string name="external_path">External Storage</string>
    <string name="internal_path">Internal Storage</string>

    <string name="version">Version: %1$s</string>

    <!-- TagDetail -->
    <string name="delete_tag_ok">Delete tag succeed</string>

    <string name="dialog_title_del_tag">Warning</string>
    <string name="dialog_content_del_tag">Do you want to delete this tag? (Will not delete any account)</string>
    <string name="dialog_yes_del_tag">Delete</string>
    <string name="dialog_no_del_tag">Cancel</string>
    <string name="title_activity_settings">Settings</string>

</resources>
