<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.accountdetail.AccountDetailActivity">
    <item android:id="@+id/action_info"
          android:title="@string/action_info"
          android:orderInCategory="80"
          android:icon="@mipmap/ic_info_outline_white_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/action_star"
          android:title="@string/action_star"
          android:orderInCategory="90"
          android:icon="@mipmap/ic_star_outline_black_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/action_delete"
          android:title="@string/action_save"
          android:orderInCategory="99"
          android:icon="@mipmap/ic_save_white_24dp"
          app:showAsAction="always"/>
</menu>
