<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.liueq.testdagger.activity.AccountDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:text="Site: "/>

            <EditText
                android:id="@+id/et_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                tools:text="www.google.com"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                tools:text="Name: "/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                tools:text="liueq"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                tools:text="Password: "/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                tools:text="******"/>

            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                tools:text="Mail:"/>

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                tools:text="xxx@gmail.com"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                tools:text="Description: "/>

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="My Google account."/>


            <Button
                android:id="@+id/btn_commit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/commit_btn_bg"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="Save"
                android:textColor="@android:color/white"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
